2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/metadata.rb, test/test_datetime.rb:
	   suppress warnings 'instance variable @xxxx not initialized' when
	   running ruby with '-w' option. (suggested by Daniel Berger.)

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_dbi.rb, test/test_oci8.rb:
	   add 'purge' option to 'drop table' statement when Oracle 10g
	   or upper.
	* ext/oci8/bind.c: add OCI8::BindType::BinaryDouble when SQLT_BDOUBLE
	   is defined.
	* lib/oci8/compat.rb: add OCI8::SQLT_IBFLOAT, OCI8::SQLT_IBDOUBLE and
	   OCI8::SQLT_BFILE for compatibility with 1.0.
	* lib/oci8/metadata.rb, lib/oci8/object.rb, lib/oci8/oci8.rb:
	   rename :bfloat and :bdouble to :binary_float and :binary_double
	   respectively.
	* lib/oci8/oci8.rb: use OCI8::BindType::BinaryDouble for :binary_float
	   and :binary_double column when BinaryDouble is available.
	* test/test_oci8.rb: bind as binary_double explicitly in
	   test_binary_float.

2007-10-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: quick fix to get and set object
	   attributes without explicitly setting default_connection.
	   I am now wavering about what to do.

2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix a problem to compile with a
	   third-party x86_64 rpm package. '--with-instant-client'
	   option become obsolete and is ignored.
	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
	   Not all tests are passed on FreeBSD yet.
	* lib/oci8/object.rb: fix a problem when convertion ruby class
	   name to oracle object name fails.

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
	    (suggested by Venkat Pa)

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix external OS authentication.
	    I applied Dan Fitch's patch to improper location.

2007-07-24  KUBO Takehiro  <kubo@jiubao.org>